config/samples/nlb-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    h3poteto.dev/aws-global-accelerator-enabled: "yes"
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: tcp
    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
    # external-dns.alpha.kubernetes.io/hostname: "h3poteto-test.example.com"
  name: h3poteto-test
  namespace: default
spec:
  externalTrafficPolicy: Local
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  - name: https
    port: 443
    protocol: TCP
    targetPort: 6443
  selector:
    app: h3poteto
  sessionAffinity: None
  type: LoadBalancer
