config/samples/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: h3poteto-test
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  - name: https
    port: 443
    protocol: TCP
    targetPort: 443
  type: NodePort
  selector:
    app: h3poteto
